explore few data wrangling approaches and bar plots with graphics package

--- a/pnote/note1.qmd
+++ b/pnote/note1.qmd
@@ -14,6 +14,8 @@ format:
     tbl-cap-location: bottom
 ---
 
+plot title - subject + details
+
 cv = continuous variables
 
 +-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
@@ -90,24 +92,24 @@ Definition :
 
 [^2]: Shaun T. (2022). What Is Kurtosis? \| Definition, Examples & Formula. Scribbr. https://www.scribbr.com/statistics/kurtosis/#:\~:text=Kurtosis%20is%20a%20measure%20of,(thin%20tails)%20are%20platykurtic.
 
-+-------------------------+------------------------------+----------------------+------------+------------+
-| topic                   | measure / parameter / aspect | Col3                 | Col4       | Col5       |
-+=========================+==============================+======================+============+============+
-| population distribution | total population             | absolute, percentage |            |            |
-|                         |                              |                      |            |            |
-|                         | young population             |                      |            |            |
-|                         |                              |                      |            |            |
-|                         | elderly population           |                      |            |            |
-|                         |                              |                      |            |            |
-|                         | working age population       |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
-|                         |                              |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
-|                         |                              |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
-|                         |                              |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
-|                         |                              |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
-|                         |                              |                      |            |            |
-+-------------------------+------------------------------+----------------------+------------+------------+
++-------------------------+------------------------------+----------------------+------+------+
+| topic                   | measure / parameter / aspect | Col3                 | Col4 | Col5 |
++=========================+==============================+======================+======+======+
+| population distribution | total population             | absolute, percentage |      |      |
+|                         |                              |                      |      |      |
+|                         | young population             |                      |      |      |
+|                         |                              |                      |      |      |
+|                         | elderly population           |                      |      |      |
+|                         |                              |                      |      |      |
+|                         | working age population       |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
+|                         |                              |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
+|                         |                              |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
+|                         |                              |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
+|                         |                              |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
+|                         |                              |                      |      |      |
++-------------------------+------------------------------+----------------------+------+------+
