--- a/handsOn_ex1.qmd
+++ b/handsOn_ex1.qmd
@@ -504,48 +504,48 @@ ggplot(data = exam_data,
 
 ### 4.3.1. Working with Coordinate
 
+::: {.callout-warning appearance="simple" icon="false"}
 By the default, the bar chart of ggplot2 is in vertical form.
 
 The code chunk below flips the horizontal bar chart into vertical bar chart by using `coord_flip()`.
 
 ```{r}
-ggplot(data=exam_data, 
-       aes(x=RACE)) +
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
   geom_bar() +
   coord_flip()
 ```
+:::
 
-#### How to change to the y- and x-axis range?
+### 4.3.2 Change range for y- and x-axis
 
+::: {.callout-warning appearance="simple" icon="false"}
 The scatterplot on the right is slightly misleading because the y-aixs and x-axis range are not equal.
 
 The code chunk below fixed both the y-axis and x-axis range from 0-100.
 
 ```{r}
-ggplot(data=exam_data, 
-       aes(x= MATHS, y=ENGLISH)) +
+ggplot(data = exam_data, 
+       aes(x = MATHS, y = ENGLISH)) +
   geom_point() +
-  geom_smooth(method=lm, 
-              size=0.5) +  
-  coord_cartesian(xlim=c(0,100),
-                  ylim=c(0,100))
+  geom_smooth(method = lm, 
+              size = 0.5) +  
+  coord_cartesian(xlim = c(0,100),
+                  ylim = c(0,100))
 ```
+:::
 
-## 5. Essential Grammatical Elements in ggplot2
+## 5. NON-DATA CONTROL ELEMENT
 
-### Themes
+-   background colour
 
--   Themes control elements of the graph not related to the data. For example:
+-   size of fonts
 
-    -   background colour
+-   grid lines
 
-    -   size of fonts
+-   colour of labels
 
-    -   gridlines
-
-    -   colour of labels
-
--   Built-in themes include:
+-   Built-in themes include :
 
     -   `theme_gray()` (default)
 
@@ -553,59 +553,65 @@ ggplot(data=exam_data,
 
     -   `theme_classic()`
 
--   A list of theme can be found at this [link](https://ggplot2.tidyverse.org/reference/ggtheme.html).
+-   [Other themes](https://ggplot2.tidyverse.org/reference/ggtheme.html)
 
--   Each theme element can be conceived of as either a line (e.g. x-axis), a rectangle (e.g. graph background), or text (e.g. axis title).
+## **5.1 Set Theme**
 
-## Essential Grammatical Elements in ggplot2
+::: {.callout-warning appearance="simple" icon="false"}
+::: {.callout-alert appearance="simple" icon="false"}
+[Usage of the code chunk below :]{style="color:#a39f9d"}
 
-### Working with theme
+[***facet_wrap( )*** - ggplot2 -]{style="color:#d46e15"} to forms a matrix of panels defined by row and column faceting variables.
 
-The code chunk below plot a horizontal bar chart using `theme_gray()`.
+It is most useful when you have two discrete variables, and all combinations of the variables exist in the data.
+:::
+
+### **5.1.1 Plot Horizontal Bar Chart with `theme_gray( )`**
 
 ```{r}
-ggplot(data=exam_data, 
-       aes(x=RACE)) +
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
   geom_bar() +
   coord_flip() +
   theme_gray()
 ```
 
-### Working with theme
-
-A horizontal bar chart plotted using `theme_classic()`.
+### 5.1.2 Plot Horizontal Bar Chart with `theme_classic( )`
 
 ```{r}
-ggplot(data=exam_data, 
-       aes(x=RACE)) +
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
   geom_bar() +
   coord_flip() +
   theme_classic()
 ```
 
-A horizontal bar chart plotted using `theme_minimal()`.
+### **5.1.3 Plot Horizontal Bar Chart with `theme_minimal( )`**
 
 ```{r}
-ggplot(data=exam_data, 
-       aes(x=RACE)) +
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
   geom_bar() +
   coord_flip() +
   theme_minimal()
 ```
+:::
 
-### Working with theme
+## 6. DESIGN DATA-DRIVEN VISUALISATION FOR ANALYSIS
 
-Plot a horizontal bar chart looks similar to the figure below.
+## 6.1 Frequent Analysis
 
--   Changing the colors of plot panel background of `theme_minimal()` to light blue and the color of grid lines to white.
+### 6.1.1 Original Bar Chart
 
-![](images/image-78293342.png)
+A simple vertical bar chart for frequency analysis.
 
-## Designing Data-drive Graphics for Analysis I
+```{r}
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
+  geom_bar()
+```
 
-### The original design
-
-A simple vertical bar chart for frequency analysis. Critics:
+Critics:
 
 -   y-aixs label is not clear (i.e. count)
 
@@ -613,7 +619,15 @@ A simple vertical bar chart for frequency analysis. Critics:
 
 -   For static graph, frequency values should be added to provide addition information.
 
-![](images/image-1757264623.png)
+### 6.1.2 Enhance Bar Chart
+
+```{r}
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
+  geom_bar()
+```
+
+![](images/image-1254806109.png)
 
 ## Designing Data-drive Graphics for Analysis I
 
@@ -677,6 +691,12 @@ Plot a trellis boxplot looks similar to the figure below.
 ![](images/image-811211769.png)
 
 ![](images/image-468521342.png)
+
+Plot a horizontal bar chart looks similar to the figure below.
+
+-   Changing the colors of plot panel background of `theme_minimal()` to light blue and the color of grid lines to white.
+
+![](images/image-78293342.png)
 
 ## Reference
 
